@@ -1,5 +1,12 @@
 2017-06-18  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* tp/Texinfo/MiscXS.pm: Remove check for UTF-8 locale, as
+	"locale -a" can be slow to run (about 4.5 seconds on my computer 
+	after disk caches are cleared), and tp/Texinfo/MiscXS/misc.c may
+	not need it.  (Reverses change on 2017-03-12.)
+
+2017-06-18  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* pretest 6.3.92
 	* configure.ac: Update version.
 
